--- a/shadowdom.html
+++ b/shadowdom.html
@@ -6,54 +6,37 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <script src="./src/components.js" defer></script>
+    <link rel="stylesheet" href="assets/shadowdom.css">
     <link rel="stylesheet" href="./assets/style.css">
     <title>Shadow DOM</title>
 </head>
 <body>
-
-<!--     
-    <br>
-    <div class="card">
-        <div class="card-image">
-            <img src="">
-        </div>
-        <div class="category"> <span>Illustration</span> </div>
-        <div class="heading"> <span>A heading that must span over two lines</span>
-            <div class="author"> By <span class="name">Abi</span></div>
-        </div>
-    </div>
     
-    <br> -->
-
-     
     <card-news
-    photo="assets/imgs/gato-amarelo.jpg"
-    title="CUIDADO"
-    contet="Gato de cor amarelo esta a solta pela cidade"
-    author="any"    
+        photo="assets/imgs/gato-amarelo.jpg"
+        title="CUIDADO"
+        content="Gato de cor amarelo esta a solta pela cidade"
+        author="any"    
     >
     </card-news>
 
     <card-news
-    photo="assets/imgs/gato-rajado.jpg"
-    title="Gato corcunda"
-    contet="Foi avistando hoje pela noite um gato rajado corcunda apavorando a sociedade"
-    author=" filipe"
+        photo="assets/imgs/gato-rajado.jpg"
+        title="Gato corcunda"
+        content="Foi avistando hoje pela noite um gato rajado corcunda apavorando a sociedade"
+        author=" filipe"
     >
     </card-news>
-   
+
     <card-news
-    photo=""
-    title=""
-    contet=""
-    author=""
+        photo=""
+        title=""
+        content=""
+        author=""
     >
-
     </card-news>
-  
-
 
 
 </body>
+<script src="./src/components.js" defer></script>
 </html>
