correção de redirecionamento no ´pages´

--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="pages/style.css">
     <title>Filipe !</title>
 </head>
 <body>
     
-    <h1>Trabalhando com <a href="./shadowdom.html" target="_blank"> Shadow DOM</a> </h1> 
+    <h1>Trabalhando com <a href="./pages/shadowdom.html" target="_blank"> Shadow DOM</a> </h1> 
 
     <section class="servicos">
         <h1>Micro Serviços</h1>
         <ul>
-            <li><a href="./checksenha.html">Checador de segurança de senha</a></li>
-            <li><a href="./pomodoro.html">Pomodoro</a></li>
+            <li><a href="./pages/checksenha.html">Checador de segurança de senha</a></li>
+            <li><a href="./pages/pomodoro.html">Pomodoro</a></li>
             <li></li>
         </ul>
     </section>
