--- a/pages/checksenha.html
+++ b/pages/checksenha.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <title>Checador de segurança de senha</title>
-    <link rel="stylesheet" href="./checksenha.css">
+    <link rel="stylesheet" href="checksenha.css">
 </head>
 <body>
     <h1>Teste de Segurança</h1>
